--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -15,5 +15,10 @@
   <%= @event.date %>
 </p>
 
+<p>
+  <strong>Attendance:</strong>
+  <%= @event.attendees %>
+</p>
+
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
