--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,23 +1,28 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Events</h1>
+<div class="container-fluid">
+<h2>Upcoming Events</h2>
 
-<table>
+<table class="table">
   <thead>
-    <tr>
+    <tr >
+     <th>Owner</th>
       <th>Title</th>
       <th>Description</th>
       <th>Date</th>
+      <th>Location</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @events.each do |event| %>
+    <% @events.upcoming.each do |event| %>
       <tr>
+        <td><%= event.creator.name %></td>
         <td><%= event.title %></td>
         <td><%= event.description %></td>
         <td><%= event.date %></td>
+        <td><%= event.location %></td>
         <td><%= link_to 'Show', event %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,6 +31,39 @@
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New Event', new_event_path %>
+<%= link_to 'New Event', new_event_path, class:"btn btn-outline-primary" %>
+
+<br>
+<div>
+<h2 class="mt-3">Past Events</h2>
+<table class="table">
+  <thead>
+    <tr>
+     <th>Owner</th>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Date</th>
+      <th>Location</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @events.past.each do |event| %>
+      <tr>
+        <td><%= event.creator.name %></td>
+        <td><%= event.title %></td>
+        <td><%= event.description %></td>
+        <td><%= event.date %></td>
+        <td><%= event.location %></td>
+        <td><%= link_to 'Show', event %></td>
+        <td><%= link_to 'Edit', edit_event_path(event) %></td>
+        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+</div>
+</div>
