--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,18 @@
 <p id="notice"><%= notice %></p>
+  <h1 > <%= @user.name %> </h1>
 
-<p>
-  <strong>ID:</strong>
-  <%= @user.id %>
-</p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @user.name %>
-</p>
-
-<% @events%>
+    <p class="text-muted"> <%= pluralize(@user.created_events.count, 'event').upcase %> CREATED</p>
+      <div>
+        <% @user.created_events.each do |event| %>
+          <%= link_to event.title, event_path(event) %>
+        <% end %>
+      </div>
+    
+ 
+    <p class="text-muted"> <%= pluralize(@user.attended_events.count, 'event').upcase %> ATTENDED</p>
+    <div>
+        <% @user.attended_events.each do |event| %>
+          <%= link_to event.title, event_path(event) %>
+        <% end %>
+    </div>
