--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,16 +29,7 @@
 
 <%= event_attendance(@event) %>
 
-  
-    <% if current_user == @event.creator %>
-     
-      <%= link_to 'Delete', event_path, method: :delete, class: "btn",
-                            data: { confirm: "Delete this event?"} %>
-    <% elsif @event.attendees.include?(current_user) %>
-      <%= link_to 'Cancel', cancel_attend_event_path, class: "btn" %>
-    <% else %>
-      <%= link_to 'Attend', attend_event_path, class: "btn" unless @event.date < Time.now %>
-    <% end %>
+<%= event_creator %>
   </div>
 </div>
 
