--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,16 +11,6 @@
   </head>
 
   <body>
-    <% if flash[:notice] %>
-      <div class="notification">
-        <p class="notice"><%= notice %></p>
-      </div>
-    <% end %>
-    <% if flash[:alert] %>
-      <div class="notification">
-        <p class="alert"><%= alert %></p>
-      </div>
-    <% end %>
 
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
@@ -36,21 +26,7 @@
               <p class= 'control'>
                 <%= link_to "Create event", new_event_path %>
               </p>
-              <% if current_user %>
-                <p class= 'control'>
-                  <%= link_to current_user.name, user_path(current_user), class: "btn" %>
-                </p>
-                <p class= 'control'>
-                  <%= link_to "Log out", logout_path, class: "btn" %>
-                </p>
-              <% else %>
-                <p class="control">
-                  <%= link_to 'Sign In', login_path, class: "btn" %>
-                </p>
-						    <p class="control">
-                  <%= link_to 'Sign Up', signup_path, class: "btn" %>
-                </p>
-              <% end %>
+             <%= app_nav %>
             </div>
           </div>
         </div>
